[metadata]
name = timm_vis
version = 1.0.0
author = Pranav Pulijala
description = Visualizer for PyTorch image models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/novice03/timm-vis
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True